fix page break on username hyphen

--- a/packages/fakeyou.com/src/scss/site-refresh.scss
+++ b/packages/fakeyou.com/src/scss/site-refresh.scss
@@ -778,6 +778,10 @@ styles with important tags:
       list-style: none;
     }
   }
+
+  .no-hyphen {
+    word-wrap: normal;
+  }
 }
 
 select {
